[CHORE] stream 로직 수정